getting HN top 10 stories

--- a/yetanotherhackernews/templates/list.html
+++ b/yetanotherhackernews/templates/list.html
@@ -29,7 +29,7 @@
 
         <div class="bs-example" data-example-id="panel-without-body-with-table">
             <div class="panel panel-default">
-                <div class="panel-heading">Top 10 posts</div>
+                <div class="panel-heading">Top 10 news</div>
                 <table class="table">
                     <thead>
                         <tr>
